<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".ui.add.NoteFragment">

    <!--Close-->

    <ImageView
        android:id="@+id/close_img"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:rotation="45"
        android:src="@drawable/ic_round_add_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!--title-->
    <EditText
        android:id="@+id/title_edt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/bg_rounded_yellow_light"
        android:fontFamily="@font/abel"
        android:hint="@string/title"
        android:maxLines="1"
        android:padding="10dp"
        android:textColorHint="@color/yellowDark"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/close_img" />

    <!--desc-->
    <EditText
        android:id="@+id/desc_edt"
        android:layout_width="0dp"
        android:layout_height="120dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/bg_rounded_yellow_light"
        android:fontFamily="@font/abel"
        android:gravity="top"
        android:hint="@string/desc"
        android:maxLines="1"
        android:padding="10dp"
        android:textColorHint="@color/yellowDark"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_edt" />

    <!--content-->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/content_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/bg_rounded_gray_light"
        android:padding="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/desc_edt">

        <!--Categories-->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/categories_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent">


            <!--title-->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/abel"
                android:text="@string/categories"
                android:textColor="@color/grayDark"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/cardView"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <!--Spinner-->
            <androidx.cardview.widget.CardView
                android:id="@+id/cardView"
                android:layout_width="150dp"
                android:layout_height="30dp"
                android:layout_margin="3dp"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="5dp"
                app:cardElevation="1dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <Spinner
                    android:id="@+id/categories_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical" />

            </androidx.cardview.widget.CardView>


        </androidx.constraintlayout.widget.ConstraintLayout>


        <!--Priority-->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/priority_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            app:layout_constraintTop_toBottomOf="@id/categories_layout">


            <!--title-->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/abel"
                android:text="@string/priority"
                android:textColor="@color/grayDark"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/cardView2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <!--Spinner-->
            <androidx.cardview.widget.CardView
                android:id="@+id/cardView2"
                android:layout_width="150dp"
                android:layout_height="30dp"
                android:layout_margin="3dp"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="5dp"
                app:cardElevation="1dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <Spinner
                    android:id="@+id/priority_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical" />

            </androidx.cardview.widget.CardView>


        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

    <!--Save-->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/save_note_btn"
        android:layout_width="wrap_content"
        android:layout_height="55dp"
        android:fontFamily="@font/abel"
        android:paddingHorizontal="50dp"
        android:text="@string/save"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:backgroundTint="@color/green"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/content_layout" />

</androidx.constraintlayout.widget.ConstraintLayout>